<?xml version="1.0"?>
<package>
  <name>microstrain_comm</name>
  <version>0.0.1</version>
  <description>
    A ROS wrapper for the microstrain_comm driver for the Microstrain 3DM-GX3®-25 IMU.
  </description>

  <maintainer email="pgeneva@udel.edu">Patrick Geneva</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>glib2</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>glib2</run_depend>

</package>